# Memori-Vault

./: .gitattributes  .gitignore  AI.md  CONTRIBUTING.en.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.en.md  README.md  README.zh-CN.md  RELEASE_NOTES_v0.1.0.md  UI.md  deny.toml  dev.ps1  plan.md
Memory_Test/: doc_001_产品策略_极光账本_制度.md  doc_002_产品策略_极光账本_会议纪要.txt  doc_003_产品策略_极光账本_SOP.docx  doc_005_产品策略_极光账本_问答卡.md  doc_006_运营增长_青梧留存_制度.txt  doc_007_运营增长_青梧留存_会议纪要.docx  doc_009_运营增长_青梧留存_复盘.md  doc_010_运营增长_青梧留存_问答卡.txt  doc_011_安全合规_玄武密钥_制度.docx  doc_013_安全合规_玄武密钥_SOP.md  doc_014_安全合规_玄武密钥_复盘.txt  doc_015_安全合规_玄武密钥_问答卡.docx  doc_017_技术架构_银杏-17_会议纪要.md  doc_018_技术架构_银杏-17_SOP.txt  doc_019_技术架构_银杏-17_复盘.docx  doc_021_客户成功_白鹭工单_制度.md  doc_022_客户成功_白鹭工单_会议纪要.txt  doc_023_客户成功_白鹭工单_SOP.docx  doc_025_客户成功_白鹭工单_问答卡.md  doc_026_财务风控_赤松预算_制度.txt  doc_027_财务风控_赤松预算_会议纪要.docx  doc_029_财务风控_赤松预算_复盘.md  doc_030_财务风控_赤松预算_问答卡.txt  doc_031_数据治理_松塔标签_制度.docx  doc_033_数据治理_松塔标签_SOP.md  doc_034_数据治理_松塔标签_复盘.txt  doc_035_数据治理_松塔标签_问答卡.docx  doc_037_人力组织_石竹梯队_会议纪要.md  doc_038_人力组织_石竹梯队_SOP.txt  doc_039_人力组织_石竹梯队_复盘.docx  doc_041_供应链_蓝鲸_B17_制度.md  doc_042_供应链_蓝鲸_B17_会议纪要.txt  doc_043_供应链_蓝鲸_B17_SOP.docx  doc_045_供应链_蓝鲸_B17_问答卡.md  doc_046_品牌市场_雾凇发布_制度.txt  doc_047_品牌市场_雾凇发布_会议纪要.docx  doc_049_品牌市场_雾凇发布_复盘.md  doc_050_品牌市场_雾凇发布_问答卡.txt  doc_051_法务合同_琥珀条款_制度.docx  doc_053_法务合同_琥珀条款_SOP.md  (+39 more)
Memory_Test_V2/: corpus_manifest.json  ensig_001_Aurora_Ledger_policy.md  ensig_002_Aurora_Ledger_email.txt  ensig_003_Aurora_Ledger_chat.txt  ensig_004_Aurora_Ledger_minutes.docx  ensig_006_Aurora_Ledger_params.xlsx  ensig_007_Aurora_Ledger_slides.pptx  ensig_008_Cedar_Retention_policy.md  ensig_009_Cedar_Retention_email.txt  ensig_010_Cedar_Retention_chat.txt  ensig_011_Cedar_Retention_minutes.docx  ensig_013_Cedar_Retention_params.xlsx  ensig_014_Cedar_Retention_slides.pptx  ensig_015_Onyx_Keyring_policy.md  ensig_016_Onyx_Keyring_email.txt  ensig_017_Onyx_Keyring_chat.txt  ensig_018_Onyx_Keyring_minutes.docx  ensig_020_Onyx_Keyring_params.xlsx  ensig_021_Onyx_Keyring_slides.pptx  ensig_022_Harbor_Tickets_policy.md  ensig_023_Harbor_Tickets_email.txt  ensig_024_Harbor_Tickets_chat.txt  ensig_025_Harbor_Tickets_minutes.docx  ensig_027_Harbor_Tickets_params.xlsx  ensig_028_Harbor_Tickets_slides.pptx  ensig_029_Quartz_Budget_policy.md  ensig_030_Quartz_Budget_email.txt  ensig_031_Quartz_Budget_chat.txt  ensig_032_Quartz_Budget_minutes.docx  ensig_034_Quartz_Budget_params.xlsx  ensig_035_Quartz_Budget_slides.pptx  ensig_036_Maple_Pipeline_policy.md  ensig_037_Maple_Pipeline_email.txt  ensig_038_Maple_Pipeline_chat.txt  ensig_039_Maple_Pipeline_minutes.docx  ensig_041_Maple_Pipeline_params.xlsx  ensig_042_Maple_Pipeline_slides.pptx  noise_001_培训材料.md  noise_002_术语表.md  noise_003_培训材料.md  (+426 more)
Memory_Test_backup_20260428_202031/: doc_001_zh_自然语言处理.md  doc_002_zh_自然语言处理.txt  doc_003_en_Software_engineering.md  doc_004_en_Software_engineering.txt  doc_005_en_Rust_(programming_language).md  doc_006_en_Rust_(programming_language).txt  doc_007_en_Robotics.md  doc_008_en_Robotics.txt  doc_009_zh_数据库.md  doc_010_zh_数据库.txt  doc_011_zh_物联网.md  doc_012_zh_物联网.txt  doc_013_en_Algorithm.md  doc_014_en_Algorithm.txt  doc_015_en_Cloud_computing.md  doc_016_en_Cloud_computing.txt  doc_017_zh_JavaScript.md  doc_018_zh_JavaScript.txt  doc_019_en_Database.md  doc_020_en_Database.txt  doc_021_en_Quantum_computing.md  doc_022_en_Quantum_computing.txt  doc_023_zh_搜索引擎.md  doc_024_zh_搜索引擎.txt  doc_025_zh_机器人.md  doc_026_zh_机器人.txt  doc_027_en_Distributed_computing.md  doc_028_en_Distributed_computing.txt  doc_029_en_Artificial_intelligence.md  doc_030_en_Artificial_intelligence.txt  doc_031_en_Python_(programming_language).md  doc_035_zh_操作系统.md  (+43 more)
memori-config/: Cargo.toml  config.yaml.example
memori-config/src/: lib.rs
memori-core/: Cargo.toml
memori-core/examples/: daemon_demo.rs  debug_query.rs  graph_bench.rs  perf_scale.rs  phase2_diagnose.rs  retrieval_regression.rs  usability_smoke.rs
memori-core/src/: answer_judge.rs  circuit_breaker.rs  embedding_client.rs  engine.rs  engine_retrieve.rs  engine_search.rs  error.rs  filter.rs  graph_extractor.rs  indexing.rs  indexing_graph.rs  indexing_rebuild.rs  lib.rs  llm_generator.rs  llm_http.rs  logging.rs  model_config.rs  query.rs  query_utils.rs  rerank_client.rs  retrieval.rs  retrieval_eval.rs  retrieval_output.rs  runtime.rs  tests.rs
memori-core/src/engine/: ask.rs  mod.rs  search.rs  state.rs
memori-desktop/: Cargo.toml  tauri.conf.json
memori-desktop/capabilities/: default.json
memori-desktop/icons/: README.md  icon.icns
memori-desktop/src/: desktop_state.rs  dto.rs  keychain.rs  lib.rs  main.rs  model_runtime.rs  model_settings.rs  provider_client.rs  settings_io.rs  window_state.rs
memori-desktop/src/commands/: ask.rs  graph.rs  indexing.rs  logs.rs  mcp.rs  mod.rs  model.rs  model_runtime_cmd.rs  regression.rs  scope.rs  settings.rs
memori-parser/: Cargo.toml
memori-parser/src/: lib.rs
memori-parser/tests/: legacy_formats.rs
memori-parser/tests/fixtures/: legacy_sample.doc  legacy_sample.ppt  legacy_sample.xls
memori-server/: Cargo.toml
memori-server/src/: audit.rs  auth.rs  dto.rs  http_tests.rs  main.rs  middleware.rs  model_fetch.rs  model_runtime.rs  settings_io.rs  state.rs
memori-server/src/mcp/: mod.rs  prompts.rs  protocol.rs  resources.rs  tools.rs  tools_backup.rs  tools_impl.rs  tools_memory.rs  tools_retrieval.rs  tools_schema.rs  transport_http.rs  transport_stdio.rs  types.rs
memori-server/src/model_runtime/: settings.rs  tests.rs
memori-server/src/routes/: admin.rs  ask.rs  auth.rs  health.rs  indexing.rs  mod.rs  models.rs  openapi.rs  settings.rs
memori-storage/: Cargo.toml
memori-storage/src/: document.rs  document_graph.rs  document_index.rs  lib.rs  memory.rs  pool.rs  schema.rs  schema_utils.rs  search.rs  store.rs  tests.rs  text.rs  text_query.rs  text_score.rs  vector.rs
memori-vault/: Cargo.toml
memori-vault/src/: lib.rs
memori-vector-index/: Cargo.toml
memori-vector-index/src/: lib.rs
(+162 files in other folders)
