[workspace]
members = [
  "memori-vault",
  "memori-parser",
  "memori-storage",
  "memori-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Memori-Vault"]

[workspace.dependencies]
notify = "8.2.0"
tokio = { version = "1.48.0", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
thiserror = "2.0.17"
tracing = "0.1.41"
