[package]
name = "memori-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Memori-Vault 配置中心"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.36"
thiserror.workspace = true
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.20"
