[package]
name = "memori-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Memori-Vault 核心调度引擎"

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "signal", "fs"] }
thiserror.workspace = true
tracing.workspace = true
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
memori-vault = { path = "../memori-vault" }
memori-parser = { path = "../memori-parser" }
memori-storage = { path = "../memori-storage" }
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
bincode = "1.3.3"

[dev-dependencies]
